Fixed blue halo clipping

--- a/pages/contact/contact.less
+++ b/pages/contact/contact.less
@@ -9,70 +9,16 @@
 	}
 	
 	[data-role="content"] {
-
-        .ui-grid-a {
-        	
-			.ui-block-a {
-				padding-right: 0.5em;
-			}
-			.ui-block-b {
-				padding-left: 0.5em;
-			}
-        }
-
-        .ui-grid-b {
-			.ui-block-a {
-				padding-right: 0.5em;
-			}
-			.ui-block-b {
-				padding-right: 0.5em;
-				padding-left: 0.5em;
-			}
-			.ui-block-c {
-				padding-left: 0.5em;
-			}
-	        
-        }
+	
+		li .ui-block-a, li .ui-block-b, li .ui-block-c, li .ui-grid-solo {
+			padding-right: 8px;
+			padding-left: 8px;
+		}
 
 		[data-id="address"] {
 			height:6em !important;
 		}
 
-
-        [data-id="dropzone"] {
-            //text-align: center;
-            //display:block;
-            //width:100%;
-		}
-		/*
-
-        [data-id="dropzone.container"] {
-            text-align: center;
-
-
-            [data-id="dropzone.image"] {
-                vertical-align: middle;
-                //border: 3px solid white;
-                max-width:80px;
-                max-height:80px;
-                .border-radius(8px);
-
-            }
-
-            [data-id="dropzone.border"] {
-                .border-radius(12px);
-                
-                border: 4px dashed @x-lightGrayColor;
-                height:100px;
-                width:100px;           
-                display: inline-block; 
-                line-height: 100px;
-                vertical-align: middle;   
-                cursor: pointer;
-
-            }
-        }
-        */
 	}
 	
 	[data-role="button-row"] {
